test/TestPhases/causality/invalid/concurSingletons.blc
import M "../imports/mod"

@[EntryPoint]
activity Main () ()
    cobegin
        run M.Act1()
    with
        run M.Act2()
    end
end